<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cPlan"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="210dp"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp"
    app:cardBackgroundColor="#9900ACC1">

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvBreakfast"
        tools:text="Lunes"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBreakfast"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/blueaquamarine"
        app:layout_constraintBottom_toTopOf="@id/cvSnack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/Breakfast"
                    style="@style/PlanningTittles"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etBreakfast"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Escribe aquí tu desayuno"
                        style="@style/PlanningText"
                        android:background="@android:color/transparent"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:scrollbars="vertical"
                        android:scrollbarStyle="outsideOverlay"
                        android:layout_marginHorizontal="5dp"
                     />
                </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSnack"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/bluelight"
        app:layout_constraintBottom_toTopOf="@id/cvLunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvBreakfast">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/Snack"
                style="@style/PlanningTittles"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etSnack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Escribe aquí tu almuerzo"
                    style="@style/PlanningText"
                    android:background="@android:color/transparent"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="outsideOverlay"
                    android:layout_marginHorizontal="5dp"
                    />
            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLunch"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/bluemediumlight"
        app:layout_constraintBottom_toTopOf="@id/cvSnack2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSnack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/Lunch"
                style="@style/PlanningTittles"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etLunch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Escribe aquí tu comida"
                    style="@style/PlanningText"
                    android:background="@android:color/transparent"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="outsideOverlay"
                    android:layout_marginHorizontal="5dp"
                    />
            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSnack2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/bluemediumdark"
        app:layout_constraintBottom_toTopOf="@id/cvDinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvLunch">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/Snack2"
                style="@style/PlanningTittles"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etSnack2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Escribe aquí tu merienda"
                    style="@style/PlanningText"
                    android:background="@android:color/transparent"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="outsideOverlay"
                    android:layout_marginHorizontal="5dp"
                    />
            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDinner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/bluedark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSnack2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/Dinner"
                style="@style/PlanningTittles"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etDinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Escribe aquí tu cena"
                    style="@style/PlanningText"
                    android:background="@android:color/transparent"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="outsideOverlay"
                    android:layout_marginHorizontal="5dp"
                    />
            </ScrollView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>